test/classes/figueroa/BogusDestructors7.good
BogusDestructors7.chpl:5: warning: "~classname" naming of deinitializers is deprecated
BogusDestructors7.chpl:5: error: destructor name must match class/record name or deinit()
