test/classes/figueroa/BogusDestructors7.chpl
class _Class_1 {
  proc deinit () {writeln("inside ~_Class_1");}
}

proc _Class_1.~_Class_1bar () {writeln("inside _Class_1.~_Class_1bar");}
